Fix: reset credibility title padding-left on mobile

--- a/drupal/web/themes/custom/bearcom/css/components/_cta-credibility.css
+++ b/drupal/web/themes/custom/bearcom/css/components/_cta-credibility.css
@@ -193,5 +193,6 @@
     font-size: 24px;
     line-height: 28px;
     max-width: 255px;
+    padding-left: 0;
   }
 }
